Fix spacing issue for payment button

--- a/public/css/details.scss
+++ b/public/css/details.scss
@@ -36,6 +36,8 @@
       height: 500px;
       padding: 10px;
 
+      .button { margin-top: 20px; }
+
       .votes {
         color: $highlight;
         font-size: 3.0em;
@@ -107,7 +109,6 @@
             display: inline-block;
             font-size: 2.0em;
             padding: 0px 5px;
-            padding-bottom: 20px;
           }
         }
       }
